# dcr-multi-frameworks

./: .gitignore  Makefile  README.md  pyproject.toml
data/interim/: embeds.csv  embeds_talks_dcr.pkl  talk_ids.txt  talk_info.json
dcr_3_frameworks/: __init__.py  dataset.py  features.py  plots.py
dcr_3_frameworks/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
rag_apps/rag_gradio/: gradio_rag1.py  gradio_rag2.py  gradio_rag2a.py
rag_apps/rag_shiny/: shiny_rag1.py  shiny_rag2.py  shinylive_rag2_ui.py  shinylive_rag_fns.py
rag_apps/rag_streamlit/: streamlit_1_page.py  streamlit_rag.py  streamlit_rag2.py  streamlit_rag_old.py
rag_fns/: generation.py  rag.py  retrieval.py  setup_load.py
rag_utils/: logging_setup.py  rag_utils.py
scratch/: wrangle_new.py  wrangle_old.py
