[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dcr_3_frameworks"
version = "0.0.1"
description = "Comparison of Multiple Frammeworks"
authors = [
  { name = "Alan Feder" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dcr_3_frameworks"]
force_sort_within_sections = true
